* CHANGES IN dplR VERSION 1.6.0

File: TODO
-------------------------
- Added a TODO list that follows the todo.ell format.

File: NAMESPACE
-------------------------
- Added chron.plot to export list.
- Added interseries.cor to export list.
- Added plot.rwl as an S3Method.
- Added plot.crn as an S3Method.
- Added summary.rwl as an S3Method.
- Added insert and delete.ring functions.

File: skel.ccf.plot.R
---------------

- New and amitious plotting function to help cross date with skeleton plot
  and cross correlation plots.

File: ccf.series.rwl.R
---------------

- Switched the order of x and y in the call to ccf(). This makes a great deal
  more logical sense now as a missing ring shows up with a positive lag rather
  than a negative lag.

Files: ccf.series.rwl.R, corr.series.seg.R, series.rwl.plot.R
-------------------------------------------------------------

- New convenience feature: if the length of 'series' is 1, it is
  interpreted as a column index to 'rwl', and the corresponding
  series is left out of the master chronology.

File: ffcsaps.R
---------------

- Small optimization: using "usually slightly faster"
  'tcrossprod(x)' instead of 'x %*% t(x)'

File: insert.ring.R
-------------------------
- insert.ring and delete.ring functions for editing rw vectors. Very simple.

File: crn.plot.R
-------------------------
- Added several new plotting options to give users more control of plot
- Aliased crn.plot to plot.crn so it can be used as an S3 plot method.
  Thus a user can now to bar <- chon(foo); plot(bar) 
- Help revised considerably


File: read.crn.R
-------------------------
- Added class "crn" to output object.

File: cana157.rda
-------------------------
- Added class "crn" to object.

File: detrend.R and detrend.series.R
------------
- Added an Ar detrend method. Revised plotting in detrend.series
- Added a verbose option to print out parameters used in detrending
- Added a return.info option to write a list of parameters used in detrending
