@@ -38,7 +38,7 @@ export(autoread.ids, bai.in, bai.out, ccf.series.rwl, chron, cms,
        tridas.vocabulary, uuid.gen, wavelet.plot, wc.to.po,
        write.compact, write.crn, write.rwl, write.tridas,
        write.tucson, plot.rwl, interseries.cor, summary.rwl,
-       plot.crn, insert.ring, delete.ring, xskel.ccf.plot)
+       plot.crn, insert.ring, delete.ring, xskel.ccf.plot, xskel.plot)
 
 S3method(print, redfit)
 S3method(plot, rwl)
